<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"


    android:background="#202223"
    android:label="Shoppy">


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="58dp"

        android:background="#242021"
        android:padding="20dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        android:text="REGISTER"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.211" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="222dp"
        android:layout_height="125dp"

        android:layout_marginTop="29dp"
        android:layout_marginBottom="517dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/imma"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/name"

        android:hint="@string/hint_name"
        android:background="#242021"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"


        android:inputType="textCapWords"

        android:singleLine="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hint_email"
        android:background="#242021"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textCapWords"

        android:singleLine="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:background="#242021"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:hint="@string/hint_password"
        android:inputType="textCapWords"

        android:singleLine="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/phone"
        android:background="#242021"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:hint="Phone Number"
        android:inputType="textCapWords"

        android:singleLine="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:hint="Address"
        android:inputType="textCapWords"

        android:singleLine="true"
        android:background="#242021"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Button
        android:id="@+id/btnLinkToLoginScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="613dp"
        android:layout_marginBottom="70dp"

        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:background="#242021"
        android:padding="15dp"
        android:textStyle="bold|italic"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>